<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <RadioGroup
        android:id="@+id/radioGroup_AddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_AlertDialog_InputType"
        android:layout_alignRight="@+id/editText_AlertDialog_InputType"
        android:layout_below="@+id/editText_AlertDialog_InputType"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/button_AddButton_WishList"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/white_button"
            android:drawableLeft="@drawable/file_g"
            android:layout_weight="1"
            android:text="@string/main_title2" 
            android:textColor="#00BCBE" 
            android:drawablePadding="-30dp"
            android:paddingLeft="20dp"/>

        <Button
            android:id="@+id/button_AddButton_AddWish"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/green_button"
            android:drawableLeft="@drawable/add_w"
            android:layout_weight="1"
            android:text="@string/main_add"
            android:textColor="#ffffff" 
            android:drawablePadding="-30dp"
            android:paddingLeft="20dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textSize="21sp"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/add_write_down_your_wishes" />

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <EditText
	        android:id="@+id/editText_Add_Wish"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/edittext"
	        android:textSize="24sp"
	        android:hint="@string/add_wish"
	        android:gravity="left|center_vertical"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:orientation="horizontal">
        <EditText
	        android:id="@+id/editText_Add_Price"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/edittext"
	        android:textSize="24sp"
	        android:hint="@string/add_price"        
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/button_AddButton_Submit"
        android:layout_width="168dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/green_button"
        android:text="@string/add_submit"
        android:textColor="#FFFFFF" />

</LinearLayout>
